Integrate Admin APIs to UI
